--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     </head>
     <body>
 <wrapone class="wrapone">
-        <logo class="logo_1">
+        <logo>
           <img src="ashyq.png">
          <!-- <img src="1.svg"> -->
-          <h5>ASHYQ</h5>
+          <h5 class="logo_1">ASHYQ</h5>
         </logo>
-         <homo class="homo_1">
+         <homo class="homo_0">
          <h6>Номер телефона</h6>
       
         </homo>
   <homo class="homo_1">
       <h6>ИИН</h6> 
-      <h6> 156156156</h6>
+      <h6>156156156</h6>
   </homo>
   <homo></homo>
 </wrapone>      
@@ -52,8 +52,9 @@
 <wrapper>
       <h3 class="text_color">время&nbspсканирования&nbspкода</h3>
       
-      <h3>15:15</h3>
-      <h3 class="text_color_again">Покажите соответствующий результат сотруднику объекта</h3>
+      <h3 class="text_time">15:15</h3>
+      <h3 class="text_color_again">Покажите соответствующий результат</h3>
+      <h3 class="text_color_again">сотруднику объекта</h3>
 
 </wrapper>
 
