--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 <script src="script.js"></script>  
       <quadro>
                 <h4 class="enter">Куда входите:</h4>
-                <h2 class="place">"ТОО КЦИТПЬ"</h2>
+                <h2 class="place">"ТОО КОТИКИ"</h2>
                   <wraper class="wra">
                     <box class="box1"><div class="iin">БИН ИИН</div></box>
                     <box class="box2"><div class="iin">НОМЕР ВХОДА</div></box>
-                    <box class="box3"><div class="numb">611111654</div></box>
-                    <box class="box4"><div class="numb">6</div></box>
+                    <box class="box3"><div class="numb">699009994</div></box>
+                    <box class="box4"><div class="numb">9</div></box>
                   </wraper>
 
                   <h2 class="text_color">Статус</h2>
@@ -42,7 +42,7 @@
             
 <footer>
       <h3 class="text_color">время&nbspсканирования&nbspкода</h3>
-      <h3 class="text_time">19:30</h3>
+      <h3 class="text_time">19:49</h3>
       <h3 class="text_color_again">Покажите соответствующий результат</h3>
       <h3 class="text_color_again">сотруднику объекта</h3>
 </footer>
