--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <script src="script.js"></script>  
       <quadro>
                 <h4 class="enter">Куда входите:</h4>
-                <h2 class="place">"ТОО Batyr Moll"</h2>
+                <h2 class="place">"ТОО БАТЫР-ПАВЛОДАР"</h2>
                   <wraper class="wra">
-                    <box class="box1"><div class="iin">БИН ИИН</div></box>
+                    <box class="box1"><div class="iin">БИН/ИИН</div></box>
                     <box class="box2"><div class="iin">НОМЕР ВХОДА</div></box>
-                    <box class="box3"><div class="numb">000609500053</div>4654</div></box>
-                    <box class="box4"><div class="numb">1</div></box>
+                    <box class="box3"><div class="numb">140740006468</div></box>
+                    <box class="box4"><div class="numb">2</div></box>
                   </wraper>
 
                   <h2 class="text_color">Статус</h2>
 
-                  <button>СИНИЙ</button>
+                  <button>Синий</button>
 
                   <h2 class="text_color">Срок действия истечёт через</h2>
                        
@@ -42,7 +42,7 @@
             
 <footer>
       <h3 class="text_color">время&nbspсканирования&nbspкода</h3>
-      <h3 class="text_time">21:35</h3>
+      <h3 class="text_time">00:35</h3>
       <h3 class="text_color_again">Покажите соответствующий результат</h3>
       <h3 class="text_color_again">сотруднику объекта</h3>
 </footer>
