--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2 class="place">ТОО "КРЕНДЕЛЬ"</h2>
                   <wraper class="wra">
                         <box class="box1"><div class="iin">БИН/ИИН</div></box>
-                        <box class="box2"><div class="iin">НОМЕР ВХОДА</div></box>
+                        <box class="box2"><div class="iin">Номер входа</div></box>
                         <box class="box3"><div class="numb">040840003406</div></box>
                         <box class="box4"><div class="numb">1</div></box>
                   </wraper>
