--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>ashtq</title>
-    <meta charset="UTF-8">  
+    <meta charset="UTF-8">
+    <meta name="theme-color" content="#5081ea">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
