--- a/index.html
+++ b/index.html
@@ -44,17 +44,17 @@
                         <p class="blue_2">Синий</p>
                   </div>
 
-                  <h2 class="text_color">Срок действия истечёт через</h2>
+                  <h2 class="text_color">Срок действия истечет через:</h2>
                        
                   <span id="time" class="time_h3" >05:00</span>       
       </quadro>
             
       <footer>
-            <h3 class="text_color">время&nbspсканирования&nbspкода</h3>
+            <h3 class="text_color">Время&nbspсканирования&nbspкода</h3>
             <div class="text_time" id="id_clock" ></div>
             <script>digitalClock();</script>
-            <h3 class="text_color_again">Покажите соответствующий результат</h3>
-            <h3 class="text_color_again">сотруднику объекта</h3>
+            <h3 class="text_color_again">Покажите полученный результат</h3>
+            <h3 class="text_color_again">соответствующему сотруднику объекта</h3>
       </footer>
 
 </body>
