--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>ashtq</title>
-    <meta charset="UTF-8">
-    <meta name="theme-color" content="#5081ea">
+      <meta charset="UTF-8">
+      <meta name="theme-color" content="#5081ea">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1" />
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
