--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script src="script.js"></script>  
       <quadro>
             <h4 class="enter">Куда входите:</h4>
-            <h2 class="place">КГКП "Павлодарский областной&nbspдраматический театр им. А.П. Чехова"</h2>
+            <h2 class="place">КГКП "Павлодарский областной&nbspдраматический театр&nbspим. А.П. Чехова"</h2>
                   <wraper class="wra">
                         <box class="box1"><div class="iin">БИН/ИИН</div></box>
                         <box class="box2"><div class="iin">Номер входа</div></box>
