--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ashtq</title>
-    <meta charset="UTF-8">
-    <meta name="theme-color" content="#5081ea">
-    <meta name="mobile-web-app-capable" content="yes">
+      <title>ashtq</title>
+      <meta charset="UTF-8">
+      <meta name="theme-color" content="#5081ea">
+      <meta name="mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent" />
+      <meta name="format-detection" content="telephone=no">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
