--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             <h3 class="text_color">Время&nbspсканирования&nbspкода</h3>
             <div class="text_time" id="id_clock" ></div>
             <script>digitalClock();</script>
-            <h3 class="text_color_again">Покажите полученный результат</h3>
-            <h3 class="text_color_again">соответствующему сотруднику объекта</h3>
+            <h3 class="text_color_again">Покажите полученный результат соответствующему сотруднику объекта</h3>
       </footer>
-
 </body>
 </html>
