--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 
-<wrapp class="wrapp">
+<wrapper class="wrapper_logo">
             <logo>
                   <div class="icon"></div>
-                  <h5 class="logo_1">ASHYQ</h5>
+                  <h5 class="logo_text">ASHYQ</h5>
             </logo>
-      <wraphomo class="wraphomo">
+      <wrapper class="wrapper_homo">
             <homo class="homo_0">
                   <h6>Номер телефона</h6>
             </homo>
@@ -27,19 +27,19 @@
                   <h6>ИИН</h6> 
                   <h6 class="bold_numb">900125345848</h6>
             </homo>
-      </wraphomo>
-</wrapp>      
+      </wrapper>
+</wrapper>      
    
 <script src="script.js"></script>  
       <quadro>
             <h4 class="enter">Куда входите:</h4>
             <h2 class="place">КГКП "Павлодарский областной&nbspдраматический театр&nbspим. А.П. Чехова"</h2>
-                  <wraper class="wra">
+                  <wrapper class="wrapper_quadro">
                         <box class="box1"><div class="iin">БИН/ИИН</div></box>
                         <box class="box2"><div class="iin">Номер входа</div></box>
                         <box class="box3"><div class="numb">040840003406</div></box>
                         <box class="box4"><div class="numb">1</div></box>
-                  </wraper>
+                  </wrapper>
 
                   <h2 class="text_color">Статус</h2>
 
@@ -54,7 +54,7 @@
       </quadro>
             
       <footer>
-            <h3 class="text_color">Время&nbspсканирования&nbspкода</h3>
+            <h3 class="text_color">Время сканирования кода</h3>
             <div class="text_time" id="id_clock" ></div>
             <script>digitalClock();</script>
             <h3 class="text_color_again">Покажите полученный результат соответствующему сотруднику объекта</h3>
